# pylearn

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_REVIEW_2026-03-14.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  conftest.py  pylearn.spec  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml
config/: app_config.json  app_config.json.example  books.json  books.json.example  editor_config.json
content/css_notes_for_professionals/challenges/: ch01.json  ch02.json  ch03.json  ch04.json  ch05.json  ch06.json  ch07.json  ch08.json  ch09.json  ch10.json  ch11.json  ch12.json  ch13.json  ch14.json  ch15.json  ch16.json  ch17.json  ch18.json  ch19.json  ch20.json  ch21.json  ch22.json  ch23.json  ch24.json  ch25.json  ch26.json  ch27.json  ch28.json  ch29.json  ch30.json  ch31.json  ch32.json  ch33.json  ch34.json  ch35.json  ch36.json  ch37.json  ch38.json  ch39.json  ch40.json  (+7 more)
content/css_notes_for_professionals/project/: ch01.json  ch07.json  ch10.json  ch13.json  ch15.json  ch16.json  ch18.json  ch24.json  ch26.json  ch27.json  project.json
content/css_notes_for_professionals/quizzes/: ch01.json  ch02.json  ch03.json  ch04.json  ch05.json  ch06.json  ch07.json  ch08.json  ch09.json  ch10.json  ch11.json  ch12.json  ch13.json  ch14.json  ch15.json  ch16.json  ch17.json  ch18.json  ch19.json  ch20.json  ch21.json  ch22.json  ch23.json  ch24.json  ch25.json  ch26.json  ch27.json  ch28.json  ch29.json  ch30.json  ch31.json  ch32.json  ch33.json  ch34.json  ch35.json  ch36.json  ch37.json  ch38.json  ch39.json  ch40.json  (+7 more)
content/gaddis_c++_starting/challenges/: ch01.json  ch02.json  ch03.json  ch04.json  ch05.json  ch06.json  ch07.json  ch08.json  ch09.json  ch10.json  ch11.json  ch12.json  ch13.json  ch14.json  ch15.json  ch16.json  ch17.json  ch18.json  ch19.json  ch20.json
content/gaddis_c++_starting/project/: ch02.json  ch03.json  ch04.json  ch05.json  ch06.json  ch07.json  ch11.json  ch12.json  ch13.json  ch15.json  project.json
content/gaddis_c++_starting/quizzes/: ch01.json  ch02.json  ch03.json  ch04.json  ch05.json  ch06.json  ch07.json  ch08.json  ch09.json  ch10.json  ch11.json  ch12.json  ch13.json  ch14.json  ch15.json  ch16.json  ch17.json  ch18.json  ch19.json  ch20.json
content/how_to_code_in_html5_and_css3/challenges/: ch01.json  ch02.json  ch03.json  ch04.json  ch05.json  ch06.json  ch07.json  ch08.json  ch09.json  ch10.json  ch11.json
content/how_to_code_in_html5_and_css3/project/: ch02.json  ch03.json  ch04.json  ch05.json  ch06.json  ch07.json  ch09.json  ch10.json  project.json
content/how_to_code_in_html5_and_css3/quizzes/: ch01.json  ch02.json  ch03.json  ch04.json  ch05.json  ch06.json  ch07.json  ch08.json  ch09.json  ch10.json  ch11.json
content/html5_notes_for_professionals/challenges/: ch01.json  ch02.json  ch03.json  ch04.json  ch05.json  ch06.json  ch07.json  ch08.json  ch09.json  ch10.json  ch11.json  ch12.json  ch13.json  ch14.json  ch15.json  ch16.json  ch17.json  ch18.json  ch19.json  ch20.json  ch21.json  ch22.json  ch23.json  ch24.json  ch25.json  ch26.json  ch27.json  ch28.json  ch29.json  ch30.json  ch31.json  ch32.json
content/html5_notes_for_professionals/project/: ch01.json  ch03.json  (+9 more)
docs/: RELEASE_CHECKLIST.md  book-profile-guide.md  user-manual.md
docs/screenshots/: desktop.ini
scripts/: analyze_pdf_fonts.py  build_exe.py  content_prompts.py  export_exercises.py  generate_content.py  generate_icns.py  generate_quizzes.py  parse_books.py
src/pylearn/: __init__.py  __main__.py  app.py  main.py
tests/integration/: test_challenge_flow.py  test_config_roundtrip.py  test_executor.py  test_executor_extended.py  test_menu_actions.py  test_parser_pipeline.py  test_project_flow.py  test_quiz_flow.py
tests/unit/: test_book_controller.py  test_book_profiles_extended.py  test_cache_manager.py  test_challenge.py  test_config.py  test_content_classifier_extended.py  test_content_loader.py  test_database.py  test_error_handler.py  test_exercise_extractor.py  test_export.py  test_export_progress.py  test_font_analyzer.py  test_hardening.py  test_models.py  test_output_handler.py  test_overall_grade.py  test_parser.py  test_pdf_parser.py  test_project.py  test_project_content.py  test_renderer.py  test_search_dialog.py  test_security.py  test_spaced_repetition.py  test_test_runner.py  test_text_utils.py  test_ui_book_controller.py  test_ui_console.py  test_ui_dialogs.py  test_ui_external_editor.py  test_ui_theme.py  test_ui_toc.py  test_ui_toolbar.py
utils/: restore_context.py
(+302 files in other folders)
