[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylearn-reader"
version = "1.0.1"
description = "Interactive Python learning desktop app with PDF book reader and code editor"
license = "MIT"
authors = [{name = "Nate Tritle"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-QScintilla>=2.14.0",
    "PyMuPDF>=1.23.0",
    "Pygments>=2.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "mypy>=1.8.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
pylearn = "pylearn.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = "pylearn.ui.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
disable_error_code = ["union-attr", "arg-type", "override", "name-defined", "assignment", "valid-type", "misc", "operator"]

[[tool.mypy.overrides]]
module = [
    "fitz",
    "fitz.*",
    "PyQt6.Qsci",
    "PyQt6.Qsci.*",
    "pygments",
    "pygments.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (readability preference)
    "SIM105", # contextlib.suppress — existing try/except/pass is clear
    "SIM102", # nested if — sometimes more readable than combined
    "SIM117", # nested with — sometimes more readable than combined
    "B905",   # zip() strict= — not needed for internal iteration
]

[tool.ruff.lint.isort]
known-first-party = ["pylearn"]
